Agent query: Is the website navigation working correctly?
Update routing to handle GitHub Pages deployment.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/e83bc31b-5dc3-41dd-9652-ae08b5ecc864/dafb156b-3d06-4808-bb68-282618f34c28.jpg

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <title>Dave Chandraratnam - Professional Acupuncture in East Gosford</title>
     <meta name="description" content="Experience rapid natural healing through personalised acupuncture treatments in East Gosford, NSW. Professional Chinese medicine services by Dave Chandraratnam." />
     <meta name="keywords" content="acupuncture east gosford, chinese medicine central coast, pain management acupuncture, natural healing nsw" />
+    <base href="%PUBLIC_URL%/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
