--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,21 @@
     <title>Dave Chandraratnam - Professional Acupuncture in East Gosford</title>
     <meta name="description" content="Experience rapid natural healing through personalised acupuncture treatments in East Gosford, NSW. Professional Chinese medicine services by Dave Chandraratnam." />
     <meta name="keywords" content="acupuncture east gosford, chinese medicine central coast, pain management acupuncture, natural healing nsw" />
-    <base href="%PUBLIC_URL%/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      // Handle SPA routing for GitHub Pages
+      (function() {
+        const path = localStorage.getItem('gh-pages-path');
+        if (path) {
+          localStorage.removeItem('gh-pages-path');
+          window.history.replaceState(null, null, path);
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
