Agent query: I've made several updates to handle the GitHub Pages deployment, including fixing asset paths and adding verification steps. Would you like me to continue fixing the asset path prefixing issue, or should we try a different approach to get the site working?
Improve GitHub Pages deployment by using repository name in base URL and adding build verification.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/e83bc31b-5dc3-41dd-9652-ae08b5ecc864/dafb156b-3d06-4808-bb68-282618f34c28.jpg

--- a/404.html
+++ b/404.html
@@ -4,10 +4,14 @@
   <meta charset="utf-8">
   <title>Redirecting...</title>
   <script>
-    sessionStorage.redirect = location.href;
+    const l = window.location;
+    const segments = l.pathname.split('/');
+    const base = segments.slice(0, 2).join('/'); // /repository-name or ''
+    localStorage.setItem('gh-pages-path', l.pathname + l.search + l.hash);
+    l.replace(base + '/');
   </script>
-  <meta http-equiv="refresh" content="0;URL='/'">
 </head>
 <body>
+  Redirecting...
 </body>
 </html>
